--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "flatted": "^3.2.7",
     "next": "latest",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "resolutions": {
+    "webpack": "^5.0.0-beta.28"
   }
 }
